updating protocol to http

--- a/.circleci/perf_test_sck_values.yml
+++ b/.circleci/perf_test_sck_values.yml
@@ -2,7 +2,7 @@ global:
   logLevel: info
   splunk:
     hec:
-      protocol: https
+      protocol: http
       insecureSSL: true
       host: $SPLUNK_HEC_HOST_PERF
       token: $SPLUNK_HEC_TOKEN_PERF
