--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,9 +3,7 @@ jobs:
   build:
     docker:
       - image: circleci/ruby:2.6.1-node-browsers
-
     working_directory: ~/repo
-
     steps:
       - checkout
       - setup_remote_docker:
@@ -21,44 +19,35 @@ jobs:
             helm init -c
             echo "Installing aws cli..."
             sudo pip install awscli > /dev/null 2>&1
-
       - run:
           name: Update configurables to build artifacts
           command: |
             .circleci/update_sck_config.sh
-
       - run:
           name: Build SCK artifacts
           command: |
             .circleci/build_sck_artifacts.sh
-
       - run:
           name: Push SCK artifacts to s3
           command: |
             .circleci/push_sck_artifacts.sh
-
       - run:
           name: Deploy k8s connector
           command: |
             .circleci/deploy_connector.sh
-
       - run:
           name: Run functional tests
           command: |
             .circleci/run_functional_tests.sh
-
       - run:
           name:  Teardown deployment
           command: |
             helm delete --purge ci-$CIRCLE_SHA1
 
-
   perf-test:
     docker:
       - image: circleci/ruby:2.6.1-node-browsers
-
     working_directory: ~/repo
-
     steps:
       - checkout
       - setup_remote_docker:
@@ -78,27 +67,19 @@ jobs:
           name: Update configurables to build artifacts
           command: |
             .circleci/update_sck_config.sh
-#      - run:
-#          name: Build SCK artifacts
-#          command: |
-#            .circleci/build_sck_artifacts.sh
       - run:
           name: Pull SCK artifacts from s3
           command: |
             echo "Pulling SCK artifacts from s3..."
             mkdir helm-artifacts
-            aws s3 cp s3://k8s-ci-artifacts/helm-artifacts/* helm-artifacts/
+            aws s3 --region=us-east-2 sync s3://k8s-ci-artifacts/helm-artifacts/ helm-artifacts
       - run:
           name:  Deploy k8s connector for perf-tests
           command: |
             .circleci/performance/perf_deploy_sck.sh --deploy
             .circleci/performance/perf_deploy_sck.sh --deploy_data_gen "k8s-perf-test-feb20 default 10 1000000 128 1000"
 
-# Need to add this step
-#      - run:
-#          name:  Teardown perf-test deployment
-#          command: |
-
+# Need to add teardown step
 
 workflows:
   version: 2
