--- a/.circleci/performance/perf_test_sck_values.yml
+++ b/.circleci/performance/perf_test_sck_values.yml
@@ -2,37 +2,91 @@ global:
   logLevel: info
   splunk:
     hec:
-      protocol: http
-      insecureSSL: true
       host: $SPLUNK_HEC_HOST_PERF
+      insecureSSL: true
+      protocol: http
       token: $SPLUNK_HEC_TOKEN_PERF
-
 splunk-kubernetes-logging:
-  kubernetes:
-    insecureSSL: true
-  splunk:
-
-    hec:
-      indexName: perf_test_events
+  buffer:
+    '@type': memory
+    chunk_limit_records: 100000
+    chunk_limit_size: 200m
+    flush_interval: 5s
+    flush_thread_count: 1
+    overflow_action: block
+    retry_max_times: 3
+    total_limit_size: 600m
   image:
     pullPolicy: Always
-
-splunk-kubernetes-metrics:
   kubernetes:
-    useRestClientSSL: false
+    insecureSSL: true
+  resources:
+    limits:
+      cpu: 500m
+      memory: 500Mi
+    requests:
+      cpu: 100m
+      memory: 200Mi
+  splunk:
+    hec:
+      indexName: perf_test_events
+splunk-kubernetes-metrics:
+  aggregatorBuffer:
+    '@type': memory
+    chunk_limit_records: 1000000
+    chunk_limit_size: 100m
+    flush_interval: 5s
+    flush_thread_count: 1
+    overflow_action: block
+    retry_max_times: 3
+    total_limit_size: 400m
+  buffer:
+    '@type': memory
+    chunk_limit_records: 1000000
+    chunk_limit_size: 100m
+    flush_interval: 5s
+    flush_thread_count: 1
+    overflow_action: block
+    retry_max_times: 3
+    total_limit_size: 400m
+  image:
+    pullPolicy: Always
+  kubernetes:
     insecureSSL: true
     kubeletPort: 10255
+    useRestClientSSL: false
+  resources:
+    fluent:
+      limits:
+        cpu: 500m
+        memory: 500Mi
+      requests:
+        cpu: 200m
+        memory: 300Mi
   splunk:
     hec:
       indexName: perf_test_metrics
+splunk-kubernetes-objects:
+  buffer:
+    '@type': memory
+    chunk_limit_records: 10000
+    chunk_limit_size: 200m
+    flush_interval: 3s
+    flush_thread_count: 1
+    overflow_action: block
+    retry_max_times: 3
+    total_limit_size: 600m
   image:
     pullPolicy: Always
-
-splunk-kubernetes-objects:
+  kubernetes:
+    insecureSSL: true
+  resources:
+    limits:
+      cpu: 500m
+      memory: 500Mi
+    requests:
+      cpu: 100m
+      memory: 200Mi
   splunk:
     hec:
       indexName: perf_test_objects
-  kubernetes:
-    insecureSSL: true
-  image:
-    pullPolicy: Always
